// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Menu/demo/button.md correctly 1`] = `
<div
  class="menu-demo menu-demo-button"
>
  <div
    class="button-trigger "
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-message"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z"
      />
    </svg>
  </div>
  <div
    class="button-trigger "
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-message"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders Menu/demo/collapse-control.md correctly 1`] = `
<div
  class="menu-demo"
>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    style="padding:0 12px;height:30px;line-height:30px;margin-bottom:4px"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-menu-fold"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M42 11H6M42 24H22M42 37H6M13.66 26.912l-4.82-3.118 4.82-3.118v6.236Z"
      />
    </svg>
  </button>
  <div
    class="arco-menu arco-menu-dark arco-menu-vertical"
    role="menu"
    style="width:200px;border-radius:4px"
    tabindex="1"
  >
    <div
      class="arco-menu-inner"
    >
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-0-submenu-inline-0"
          aria-expanded="true"
          class="arco-menu-inline-header arco-menu-selected"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-apps"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 7H20V20H7z"
                stroke-linejoin="round"
              />
              <path
                d="M28 7H41V20H28z"
                stroke-linejoin="round"
              />
              <path
                d="M7 28H20V41H7z"
                stroke-linejoin="round"
              />
              <path
                d="M28 28H41V41H28z"
                stroke-linejoin="round"
              />
            </svg>
             Navigation 1
          </span>
          <span
            class="arco-menu-icon-suffix is-open"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-0-submenu-inline-0"
          style="height:auto"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-selected arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 4
            </span>
          </div>
        </div>
      </div>
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-0-submenu-inline-1"
          aria-expanded="false"
          class="arco-menu-inline-header"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-bug"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 42c-6.075 0-11-4.925-11-11V18h22v13c0 6.075-4.925 11-11 11Zm0 0V23m11 4h8M5 27h8M7 14a4 4 0 0 0 4 4h26a4 4 0 0 0 4-4m0 28v-.5a6.5 6.5 0 0 0-6.5-6.5M7 42v-.5a6.5 6.5 0 0 1 6.5-6.5M17 14a7 7 0 1 1 14 0"
                stroke-linejoin="round"
              />
            </svg>
             Navigation 2
          </span>
          <span
            class="arco-menu-icon-suffix "
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-0-submenu-inline-1"
          style="height:0"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
        </div>
      </div>
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-0-submenu-inline-2"
          aria-expanded="false"
          class="arco-menu-inline-header"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-bulb"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M17 42h14m6-24c0 2.823-.9 5.437-2.43 7.568-1.539 2.147-3.185 4.32-3.77 6.897l-.623 2.756A1 1 0 0 1 29.2 36H18.8a1 1 0 0 1-.976-.779l-.624-2.756c-.584-2.576-2.23-4.75-3.77-6.897A12.94 12.94 0 0 1 11 18c0-7.18 5.82-13 13-13s13 5.82 13 13Z"
              />
            </svg>
             Navigation 3
          </span>
          <span
            class="arco-menu-icon-suffix "
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-0-submenu-inline-2"
          style="height:0"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Menu/demo/dark-horizontal.md correctly 1`] = `
<div
  class="menu-demo"
>
  <div
    class="arco-menu arco-menu-dark arco-menu-horizontal"
    role="menu"
    tabindex="1"
  >
    <div
      class="arco-menu-inner"
    >
      <div
        class="arco-menu-overflow-wrap"
      >
        <div
          aria-controls="arco-menu-1-submenu-pop-0"
          aria-expanded="false"
          aria-haspopup="true"
          class="arco-menu-pop arco-menu-pop-header arco-menu-overflow-sub-menu-mirror"
        >
          <span>
            ···
          </span>
          <span
            class="arco-menu-icon-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-item arco-menu-disabled"
          role="menuitem"
          style="padding:0;margin-right:38px"
        >
          <div
            style="width:80px;height:30px;background:var(--color-fill-3);cursor:text"
          />
        </div>
        <div
          class="arco-menu-item arco-menu-selected"
          role="menuitem"
        >
          Home
          <div
            class="arco-menu-selected-label"
          />
        </div>
        <div
          class="arco-menu-item"
          role="menuitem"
        >
          Solution
        </div>
        <div
          class="arco-menu-item"
          role="menuitem"
        >
          Cloud Service
        </div>
        <div
          class="arco-menu-item"
          role="menuitem"
        >
          Cooperation
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Menu/demo/horizontal.md correctly 1`] = `
<div
  class="menu-demo"
>
  <div
    class="arco-menu arco-menu-light arco-menu-horizontal"
    role="menu"
    tabindex="1"
  >
    <div
      class="arco-menu-inner"
    >
      <div
        class="arco-menu-overflow-wrap"
      >
        <div
          aria-controls="arco-menu-2-submenu-pop-1"
          aria-expanded="false"
          aria-haspopup="true"
          class="arco-menu-pop arco-menu-pop-header arco-menu-overflow-sub-menu-mirror"
        >
          <span>
            ···
          </span>
          <span
            class="arco-menu-icon-suffix"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-item arco-menu-disabled"
          role="menuitem"
          style="padding:0;margin-right:38px"
        >
          <div
            style="width:80px;height:30px;border-radius:2px;background:var(--color-fill-3);cursor:text"
          />
        </div>
        <div
          class="arco-menu-item arco-menu-selected"
          role="menuitem"
        >
          Home
          <div
            class="arco-menu-selected-label"
          />
        </div>
        <div
          class="arco-menu-item"
          role="menuitem"
        >
          Solution
        </div>
        <div
          class="arco-menu-item"
          role="menuitem"
        >
          Cloud Service
        </div>
        <div
          class="arco-menu-item"
          role="menuitem"
        >
          Cooperation
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Menu/demo/pop.md correctly 1`] = `
<div
  class="menu-demo-round"
  style="height:600px"
>
  <div
    class="arco-menu arco-menu-light arco-menu-vertical arco-menu-pop"
    id="arco-menu-3"
    role="menu"
    style="width:200px"
    tabindex="1"
  >
    <div
      class="arco-menu-inner"
    >
      <div
        class="arco-menu-item"
        role="menuitem"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-apps"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M7 7H20V20H7z"
            stroke-linejoin="round"
          />
          <path
            d="M28 7H41V20H28z"
            stroke-linejoin="round"
          />
          <path
            d="M7 28H20V41H7z"
            stroke-linejoin="round"
          />
          <path
            d="M28 28H41V41H28z"
            stroke-linejoin="round"
          />
        </svg>
        Navigation 1
      </div>
      <div
        aria-controls="arco-menu-3-submenu-pop-2"
        aria-expanded="false"
        aria-haspopup="true"
        class="arco-menu-pop arco-menu-pop-header"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-robot"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M18 26h1v1h-1v-1ZM29 26h1v1h-1v-1Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M24 7v6m0-6h5m-5 0h-5M3 21v11m36 8H9V13h30v29m6-21v11m-27-6h1v1h-1v-1Zm11 0h1v1h-1v-1Z"
          />
        </svg>
        Navigation 2
        <span
          class="arco-menu-icon-suffix"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-right"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="m16 39.513 15.556-15.557L16 8.4"
            />
          </svg>
        </span>
      </div>
      <div
        aria-controls="arco-menu-3-submenu-pop-3"
        aria-expanded="false"
        aria-haspopup="true"
        class="arco-menu-pop arco-menu-pop-header"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-bulb"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M17 42h14m6-24c0 2.823-.9 5.437-2.43 7.568-1.539 2.147-3.185 4.32-3.77 6.897l-.623 2.756A1 1 0 0 1 29.2 36H18.8a1 1 0 0 1-.976-.779l-.624-2.756c-.584-2.576-2.23-4.75-3.77-6.897A12.94 12.94 0 0 1 11 18c0-7.18 5.82-13 13-13s13 5.82 13 13Z"
          />
        </svg>
        Navigation 3
        <span
          class="arco-menu-icon-suffix"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-right"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="m16 39.513 15.556-15.557L16 8.4"
            />
          </svg>
        </span>
      </div>
      <div
        class="arco-menu-item"
        role="menuitem"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-safe"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16.825 22.165 6 6 10-10M24 6c7 4 16 5 16 5v15s-2 12-16 16.027C10 38 8 26 8 26V11s9-1 16-5Z"
          />
        </svg>
        Navigation 4
      </div>
      <div
        class="arco-menu-item"
        role="menuitem"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-fire"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M17.577 27.477C20.022 22.579 17.041 12.98 24.546 6c0 0-1.156 15.55 5.36 17.181 2.145.537 2.68-5.369 4.289-8.59 0 0 .536 4.832 2.68 8.59 3.217 7.517-1 14.117-5.896 17.182-4.289 2.684-14.587 2.807-19.835-5.37-4.824-7.516 0-15.57 0-15.57s4.289 12.35 6.433 8.054Z"
          />
        </svg>
        Navigation 5
      </div>
    </div>
    <div
      aria-controls="arco-menu-3"
      aria-expanded="true"
      class="arco-menu-collapse-button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-menu-fold"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 11H6M42 24H22M42 37H6M13.66 26.912l-4.82-3.118 4.82-3.118v6.236Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders Menu/demo/size.md correctly 1`] = `
<div
  class="menu-demo"
  style="height:600px"
>
  <div
    class="arco-slider"
    style="width:320px;margin-bottom:24px"
  >
    <div
      class="arco-slider-wrapper"
    >
      <div
        class="arco-slider-road"
      >
        <div
          class="arco-slider-bar"
          style="left:0%;right:66.66666666666667%"
        />
        <div
          aria-disabled="false"
          aria-valuemax="400"
          aria-valuemin="160"
          aria-valuenow="240"
          aria-valuetext="240"
          class="arco-slider-button"
          role="slider"
          style="left:33.33333333333333%"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div
    class="arco-menu arco-menu-light arco-menu-vertical"
    id="arco-menu-4"
    role="menu"
    style="width:240px;height:calc(100% - 28px)"
    tabindex="1"
  >
    <div
      class="arco-menu-inner"
    >
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-4-submenu-inline-3"
          aria-expanded="true"
          class="arco-menu-inline-header arco-menu-selected"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-apps"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 7H20V20H7z"
                stroke-linejoin="round"
              />
              <path
                d="M28 7H41V20H28z"
                stroke-linejoin="round"
              />
              <path
                d="M7 28H20V41H7z"
                stroke-linejoin="round"
              />
              <path
                d="M28 28H41V41H28z"
                stroke-linejoin="round"
              />
            </svg>
             Navigation 1
          </span>
          <span
            class="arco-menu-icon-suffix is-open"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-4-submenu-inline-3"
          style="height:auto"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-selected arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-disabled arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
        </div>
      </div>
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-4-submenu-inline-4"
          aria-expanded="false"
          class="arco-menu-inline-header"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-bug"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 42c-6.075 0-11-4.925-11-11V18h22v13c0 6.075-4.925 11-11 11Zm0 0V23m11 4h8M5 27h8M7 14a4 4 0 0 0 4 4h26a4 4 0 0 0 4-4m0 28v-.5a6.5 6.5 0 0 0-6.5-6.5M7 42v-.5a6.5 6.5 0 0 1 6.5-6.5M17 14a7 7 0 1 1 14 0"
                stroke-linejoin="round"
              />
            </svg>
             Navigation 2
          </span>
          <span
            class="arco-menu-icon-suffix "
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-4-submenu-inline-4"
          style="height:0"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
        </div>
      </div>
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-4-submenu-inline-5"
          aria-expanded="false"
          class="arco-menu-inline-header"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-bulb"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M17 42h14m6-24c0 2.823-.9 5.437-2.43 7.568-1.539 2.147-3.185 4.32-3.77 6.897l-.623 2.756A1 1 0 0 1 29.2 36H18.8a1 1 0 0 1-.976-.779l-.624-2.756c-.584-2.576-2.23-4.75-3.77-6.897A12.94 12.94 0 0 1 11 18c0-7.18 5.82-13 13-13s13 5.82 13 13Z"
              />
            </svg>
             Navigation 3
          </span>
          <span
            class="arco-menu-icon-suffix "
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-4-submenu-inline-5"
          style="height:0"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-controls="arco-menu-4"
      aria-expanded="true"
      class="arco-menu-collapse-button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-menu-fold"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 11H6M42 24H22M42 37H6M13.66 26.912l-4.82-3.118 4.82-3.118v6.236Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders Menu/demo/sub-menu.md correctly 1`] = `
<div
  class="menu-demo"
  style="height:600px"
>
  <div
    class="arco-menu arco-menu-light arco-menu-vertical"
    id="arco-menu-5"
    role="menu"
    style="width:200px;height:100%"
    tabindex="1"
  >
    <div
      class="arco-menu-inner"
    >
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-5-submenu-inline-6"
          aria-expanded="true"
          class="arco-menu-inline-header arco-menu-selected"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-apps"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M7 7H20V20H7z"
                stroke-linejoin="round"
              />
              <path
                d="M28 7H41V20H28z"
                stroke-linejoin="round"
              />
              <path
                d="M7 28H20V41H7z"
                stroke-linejoin="round"
              />
              <path
                d="M28 28H41V41H28z"
                stroke-linejoin="round"
              />
            </svg>
             Navigation 1
          </span>
          <span
            class="arco-menu-icon-suffix is-open"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-5-submenu-inline-6"
          style="height:auto"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-selected arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-disabled arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
        </div>
      </div>
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-5-submenu-inline-7"
          aria-expanded="false"
          class="arco-menu-inline-header"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-bug"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 42c-6.075 0-11-4.925-11-11V18h22v13c0 6.075-4.925 11-11 11Zm0 0V23m11 4h8M5 27h8M7 14a4 4 0 0 0 4 4h26a4 4 0 0 0 4-4m0 28v-.5a6.5 6.5 0 0 0-6.5-6.5M7 42v-.5a6.5 6.5 0 0 1 6.5-6.5M17 14a7 7 0 1 1 14 0"
                stroke-linejoin="round"
              />
            </svg>
             Navigation 2
          </span>
          <span
            class="arco-menu-icon-suffix "
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-5-submenu-inline-7"
          style="height:0"
        >
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 1
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 2
            </span>
          </div>
          <div
            class="arco-menu-item arco-menu-item-indented"
            role="menuitem"
          >
            <span>
              <span
                class="arco-menu-indent"
              />
            </span>
            <span
              class="arco-menu-item-inner"
              style="display:block"
            >
              Menu 3
            </span>
          </div>
        </div>
      </div>
      <div
        class="arco-menu-inline"
      >
        <div
          aria-controls="arco-menu-5-submenu-inline-8"
          aria-expanded="false"
          class="arco-menu-inline-header"
        >
          <span>
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-bulb"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M17 42h14m6-24c0 2.823-.9 5.437-2.43 7.568-1.539 2.147-3.185 4.32-3.77 6.897l-.623 2.756A1 1 0 0 1 29.2 36H18.8a1 1 0 0 1-.976-.779l-.624-2.756c-.584-2.576-2.23-4.75-3.77-6.897A12.94 12.94 0 0 1 11 18c0-7.18 5.82-13 13-13s13 5.82 13 13Z"
              />
            </svg>
             Navigation 3
          </span>
          <span
            class="arco-menu-icon-suffix "
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-menu-inline-content"
          id="arco-menu-5-submenu-inline-8"
          style="height:0"
        >
          <div
            class="arco-menu-group"
          >
            <div
              class="arco-menu-group-title"
            >
              <span>
                <span
                  class="arco-menu-indent"
                />
              </span>
              <span>
                Menu Group 1
              </span>
            </div>
            <div
              class="arco-menu-item arco-menu-item-indented"
              role="menuitem"
            >
              <span>
                <span
                  class="arco-menu-indent"
                />
              </span>
              <span
                class="arco-menu-item-inner"
                style="display:block"
              >
                Menu 1
              </span>
            </div>
            <div
              class="arco-menu-item arco-menu-item-indented"
              role="menuitem"
            >
              <span>
                <span
                  class="arco-menu-indent"
                />
              </span>
              <span
                class="arco-menu-item-inner"
                style="display:block"
              >
                Menu 2
              </span>
            </div>
          </div>
          <div
            class="arco-menu-group"
          >
            <div
              class="arco-menu-group-title"
            >
              <span>
                <span
                  class="arco-menu-indent"
                />
              </span>
              <span>
                Menu Group 1
              </span>
            </div>
            <div
              class="arco-menu-item arco-menu-item-indented"
              role="menuitem"
            >
              <span>
                <span
                  class="arco-menu-indent"
                />
              </span>
              <span
                class="arco-menu-item-inner"
                style="display:block"
              >
                Menu 3
              </span>
            </div>
            <div
              class="arco-menu-item arco-menu-item-indented"
              role="menuitem"
            >
              <span>
                <span
                  class="arco-menu-indent"
                />
              </span>
              <span
                class="arco-menu-item-inner"
                style="display:block"
              >
                Menu 4
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-controls="arco-menu-5"
      aria-expanded="true"
      class="arco-menu-collapse-button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-menu-fold"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M42 11H6M42 24H22M42 37H6M13.66 26.912l-4.82-3.118 4.82-3.118v6.236Z"
        />
      </svg>
    </div>
  </div>
</div>
`;
